--- a/Changes
+++ b/Changes
@@ -1,5 +1,35 @@
 Changes log for Perl extension SQL::Statement
 
+Version 1.24, release March 15th, 2010
+----------------------------------------------
+
+[Misc]
+* Ignore *.rej in MANIFEST.SKIP (fixes RT #52081 reported by
+  Lars Thegler)
+
+[Bug fixes]
+* Add missing import of _INSTANCE in SQL::Statement::Function::NumericEval
+  fixes RT #52356 - reported by Detlef Pilzecker)
+* Fix wrongly discarded DISTINCT clause (RT#53186)
+
+[Improvements]
+* Fix parsing errors of plain numbers (RT#16931)
+* Fix parsing errors of nested calculation / functions (RT#16931, RT#52356)
+* Rewrite result calculation of aggregation functions (simplify code, speed up)
+* Upgrade Makefile.PL (patch from Alexandr Ciornii) to handle different
+  EU::MM versions and abilities properly
+* Update documentation to show how 'column_defs' and SQL::Statement::Term
+  instances shall be used
+* Introduce SQL::Dialect::Role providing ini-style data access to SQL::Dialects
+  (patch from Michael Schwern)
+
+[Things that may break your code]
+* SQL::Parser now didn't deliver a struct containing 'column_names',
+  'computed_columns' and 'set_functions' - it's combined into one member
+  'column_defs'.
+* Minimum required perl version is now 5.8 - upcoming next version of DBI
+  requires perl 5.8, too - and I could simplify some code that's why
+
 Version 1.23, release November 20th, 2009
 ----------------------------------------------
 
