--- a/lib/SQL/Statement/Structure.pod
+++ b/lib/SQL/Statement/Structure.pod
@@ -7,9 +7,7 @@ SQL::Statement::Structure - parse & examine structure of SQL queries
 =head1 SYNOPSIS
 
  use SQL::Statement;
- my $sql    = "
-    SELECT a FROM b JOIN c WHERE c=? AND e=7 ORDER BY f DESC LIMIT 5,2
- ";
+ my $sql    = "SELECT a FROM b JOIN c WHERE c=? AND e=7 ORDER BY f DESC LIMIT 5,2";
  my $parser = SQL::Parser->new();
  $parser->{RaiseError}=1;
  $parser->{PrintError}=0;
@@ -17,21 +15,32 @@ SQL::Statement::Structure - parse & examine structure of SQL queries
  my $stmt = SQL::Statement->new($sql,$parser);
  printf "Command             %s\n",$stmt->command;
  printf "Num of Placeholders %s\n",scalar $stmt->params;
- printf "Columns             %s\n",join',',map{$_->name}$stmt->columns;
- printf "Tables              %s\n",join',',map{$_->name}$stmt->tables;
- printf "Where operator      %s\n",join',',$stmt->where->op;
- printf "Limit               %s\n",$stmt->limit;
- printf "Offset              %s\n",$stmt->offset;
- printf "Order Columns       %s\n",join',',map{$_->column}$stmt->order;
+ printf "Columns             %s\n",join( ',', map {$_->name} $stmt->column_defs() );
+ printf "Tables              %s\n",join( ',', map {$_->name} $stmt->tables() );
+ printf "Where operator      %s\n",join( ',', $stmt->where->op() );
+ printf "Limit               %s\n",$stmt->limit();
+ printf "Offset              %s\n",$stmt->offset();
+ printf "Order Columns       %s\n",join(',', map {$_->column} $stmt->order() );
  __END__
 
 =head1 DESCRIPTION
 
-The L<SQL::Statement> module can be used by itself, without DBI and without a subclass to parse SQL statements and allow you to examine the structure of the statement (table names, column names, where clause predicates, etc.).  It will also execute statements using in-memory tables.  That means that you can create and populate some tables, then query them and fetch the results of the queries as well as examine the differences between statement metadata during different phases of prepare, execute, fetch.  See the remainder of this document for a description of how to create and modify a parser object, how to use it to parse and examine SQL statements.  See L<SQL::Statement> for other usages of the module.
+The L<SQL::Statement> module can be used by itself, without DBI and without
+a subclass to parse SQL statements and allow you to examine the structure
+of the statement (table names, column names, where clause predicates, etc.).
+It will also execute statements using in-memory tables.  That means that
+you can create and populate some tables, then query them and fetch the
+results of the queries as well as examine the differences between statement
+metadata during different phases of prepare, execute, fetch. See the
+remainder of this document for a description of how to create and modify
+a parser object, how to use it to parse and examine SQL statements.
+See L<SQL::Statement> for other usages of the module.
 
 =head1 B<Creating a parser object>
 
-The parser object only needs to be created once per script. It can then be reused to parse any number of SQL statements.  The basic creation of a parser is this:
+The parser object only needs to be created once per script. It can then be
+reused to parse any number of SQL statements. The basic creation of a parser
+is this:
 
     my $parser = SQL::Parser->new();
 
@@ -42,25 +51,34 @@ You can set the error-reporting for the parser the same way you do in DBI:
 
 As with DBI, RaiseError defaults to 0 (off) and PrintError defaults to 1 (on).
 
-For many purposes, the built-in SQL syntax should be sufficient.  However, if you need to, you can change the behaviour of the parser by extending the supported SQL syntax either by loading a file containing definitions; or by issuing SQL commands that modify the way the parser treats types, keywords, functions, and operators.
+For many purposes, the built-in SQL syntax should be sufficient. However, if
+you need to, you can change the behaviour of the parser by extending the
+supported SQL syntax either by loading a file containing definitions; or by
+issuing SQL commands that modify the way the parser treats types, keywords,
+functions, and operators.
 
     $parser->parse("LOAD MyLib::MySyntax");
     $parser->parse("CREATE TYPE myDataType");
 
-See L<SQL::Statement::Syntax> for details of the supported SQL syntax and for methods of extending the syntax.
+See L<SQL::Statement::Syntax> for details of the supported SQL syntax and
+for methods of extending the syntax.
 
 =head1 B<Parsing SQL statements>
 
-While you only need to define a new SQL::Parser object once per script, you need to define a new SQL::Statment object once for each statement you want to parse. 
+While you only need to define a new SQL::Parser object once per script, you
+need to define a new SQL::Statment object once for each statement you want
+to parse. 
 
     my $stmt = SQL::Statement->new($sql, $parser);
 
-The call to new() takes two arguments - the SQL string you want to parse, and the SQL::Parser object you previously created.  The call to new is the equivalent of a DBI call to prepare() - it parses the SQL into a structure but doesn't attempt to execute the SQL unless you explicitly call execute().
+The call to new() takes two arguments - the SQL string you want to parse,
+and the SQL::Parser object you previously created.  The call to new is the
+equivalent of a DBI call to prepare() - it parses the SQL into a structure
+but doesn't attempt to execute the SQL unless you explicitly call execute().
 
 =head1 Examining the structure of SQL statements
 
-The following methods can be used to obtain information about a
-query:
+The following methods can be used to obtain information about a query:
 
 =head2 B<command>
 
@@ -69,11 +87,11 @@ command. Example:
 
     my $command = $stmt->command();
 
-=head2 B<columns>
+=head2 B<column definitions>
 
-    my $numColumns = $stmt->columns();  # Scalar context
-    my @columnList = $stmt->columns();  # Array context
-    my($col1, $col2) = ($stmt->columns(0), $stmt->columns(1));
+    my $numColumns = $stmt->column_defs();  # Scalar context
+    my @columnList = $stmt->column_defs();  # Array context
+    my($col1, $col2) = ($stmt->column_defs(0), $stmt->column_defs(1));
 
 This method is used to retrieve column lists. The meaning depends on
 the query command:
@@ -83,26 +101,24 @@ the query command:
         $colN = $valN WHERE ...
     INSERT INTO $table ($col1, $col2, ..., $colN) VALUES (...)
 
-When used without arguments, the method returns a list of the
-columns $col1, $col2, ..., $colN, you may alternatively use a
-column number as argument. Note that the column list may be
-empty, like in
+When used without arguments, the method returns a list of the columns
+C<$col1>, C<$col2>, ..., C<$colN>, you may alternatively use a column number
+as argument. Note that the column list may be empty, like in
 
     INSERT INTO $table VALUES (...)
 
 and in I<CREATE> or I<DROP> statements.
 
 But what does "returning a column" mean? It is returning an
-SQL::Statement::Column instance, a class that implements the
-methods C<table> and C<name>, both returning the respective
-scalar. For example, consider the following statements:
+C<SQL::Statement::Util::Column> instance, a class that implements the methods
+C<table> and C<name>, both returning the respective scalar. For example,
+consider the following statements:
 
     INSERT INTO foo (bar) VALUES (1)
     SELECT bar FROM foo WHERE ...
     SELECT foo.bar FROM foo WHERE ...
 
-In all these cases exactly one column instance would be returned
-with
+In all these cases exactly one column instance would be returned with
 
     $col->name() eq 'bar'
     $col->table() eq 'foo'
@@ -114,11 +130,10 @@ with
     my($table1, $table2) = ($stmt->tables(0), $stmt->tables(1));
 
 Similar to C<columns>, this method returns instances of
-C<SQL::Statement::Table>.  For I<UPDATE>, I<DELETE>, I<INSERT>,
+C<SQL::Statement::Table>. For I<UPDATE>, I<DELETE>, I<INSERT>,
 I<CREATE> and I<DROP>, a single table will always be returned.
 I<SELECT> statements can return more than one table, in case
 of joins. Table objects offer a single method, C<name> which
-
 returns the table name.
 
 =head2 B<params>
@@ -132,10 +147,9 @@ used in a statement. For example, consider the following:
 
     INSERT INTO foo VALUES (?, ?)
 
-This would return two instances of SQL::Statement::Param. Param objects
-implement a single method, C<$param->num()>, which retrieves the
-parameter number. (0 and 1, in the above example). As of now, not very
-usefull ... :-)
+This would return two instances of C<SQL::Statement::Param>. Param objects
+implement a single method, C<$param->num()>, which retrieves the parameter
+number. (0 and 1, in the above example). As of now, not very usefull ... :-)
 
 =head2 B<row_values>
 
@@ -151,8 +165,8 @@ This method is used for statements like
     INSERT INTO $table (...) VALUES ($val1, $val2, ..., $valN),
                                     ($val1, $val2, ..., $valN)
 
-to read the values $val1, $val2, ... $valN. It returns scalar values
-or SQL::Statement::Param instances.
+to read the values C<$val1>, C<$val2>, ... C<$valN>. It returns (lists of)
+scalar values or C<SQL::Statement::Param> instances.
 
 =head2 B<order>
 
@@ -160,12 +174,12 @@ or SQL::Statement::Param instances.
     my @order = $stmt->order();      # Array context
     my($o1, $o2) = ($stmt->order(0), $stmt->order(1));
 
-In I<SELECT> statements you can use this for looking at the ORDER
-clause. Example:
+In I<SELECT> statements you can use this for looking at the ORDER clause.
+Example:
 
     SELECT * FROM FOO ORDER BY id DESC, name
 
-In this case, C<order> could return 2 instances of SQL::Statement::Order.
+In this case, C<order> could return 2 instances of C<SQL::Statement::Order>.
 You can use the methods C<$o-E<gt>table()>, C<$o-E<gt>column()> and
 C<$o-E<gt>desc()> to examine the order object.
 
@@ -180,52 +194,58 @@ cursoring:
     SELECT * FROM FOO LIMIT 5, 5
     SELECT * FROM FOO LIMIT 10, 5
 
-These three statements would retrieve the rows 0..4, 5..9, 10..14
-of the table FOO, respectively. If no C<LIMIT> clause is used, then
-the method C<$stmt-E<gt>limit> returns undef. Otherwise it returns
-the limit number (the maximum number of rows) from the statement
-(5 or 10 for the statements above).
+These three statements would retrieve the rows C<0..4>, C<5..9>, C<10..14>
+of the table FOO, respectively. If no C<LIMIT> clause is used, then the
+method C<$stmt-E<gt>limit> returns undef. Otherwise it returns the limit
+number (the maximum number of rows) from the statement (C<5> or C<10> for
+the statements above).
 
 =head2 B<offset>
 
     my $offset = $stmt->offset();
 
-If no C<LIMIT> clause is used, then the method C<$stmt-E<gt>limit> returns undef. Otherwise it returns the offset number (the index of the first row to be inlcuded in the limit clause).
+If no C<LIMIT> clause is used, then the method C<$stmt-E<gt>limit> returns
+I<undef>. Otherwise it returns the offset number (the index of the first row
+to be inlcuded in the limit clause).
 
-=head2 B<where>
+=head2 B<where_hash>
 
-    my $where = $stmt->where();
+    my $where_hash = $stmt->where_hash();
 
-This method is used to examine the syntax tree of the C<WHERE> clause.
-It returns undef (if no WHERE clause was used) or an instance of
-SQL::Statement::Op. The Op instance offers 4 methods:
+To manually evaluate the I<WHERE> clause, fetch the topmost where clause node
+with the C<where_hash> method. Then evaluate the left-hand and right-hand side
+of the operation, perhaps recursively. Once that is done, apply the operator
+and finally negate the result, if required.
+
+The where clause nodes have (up to) 4 attributes:
 
 =over 12
-
+ 
 =item op
-
-returns the operator, one of C<AND>, C<OR>, C<=>, C<E<lt>E<gt>>, C<E<gt>=>,
-C<E<gt>>, C<E<lt>=>, C<E<lt>>, C<LIKE>, C<CLIKE> or C<IS>.
-
+ 
+contains the operator, one of C<AND>, C<OR>, C<=>, C<E<lt>E<gt>>, C<E<gt>=>,
+C<E<gt>>, C<E<lt>=>, C<E<lt>>, C<LIKE>, C<CLIKE>, C<IS>, C<IN>, C<BETWEEN> or
+a user defined operator, if any.
+ 
 =item arg1
+
+contains the left-hand side of the operator. This can be a scalar value, a
+hash containing column or function definition, a parameter definition (hash has
+attribute C<type> defined) or another operation (hash has attribute C<op>
+defined).
 
 =item arg2
 
-returns the left-hand and right-hand sides of the operator. This can be a
-scalar value, an SQL::Statement::Param object or yet another
-SQL::Statement::Op instance.
+contains the left-hand side of the operator. This can be a scalar value, a
+hash containing column or function definition, a parameter definition (hash has
+attribute C<type> defined) or another operation (hash has attribute C<op>
+defined).
 
 =item neg
 
-returns a TRUE value, if the operation result must be negated after
-evalution.
+contains a TRUE value, if the operation result must be negated after evalution.
 
 =back
-
-To evaluate the I<WHERE> clause, fetch the topmost Op instance with
-the C<where> method. Then evaluate the left-hand and right-hand side
-of the operation, perhaps recursively. Once that is done, apply the
-operator and finally negate the result, if required.
 
 To illustrate the above, consider the following WHERE clause:
 
@@ -264,27 +284,51 @@ Once you have such an object, you can call eval_where;
 
     $match = $stmt->eval_where($eval);
 
+=head2 B<where>
+
+    my $where = $stmt->where();
+
+This method is used to examine the syntax tree of the C<WHERE> clause. It
+returns I<undef> (if no C<WHERE> clause was used) or an instance of
+L<SQL::Statement::Term>.
+
+The where clause is evaluated automatically on the current selected row of
+the table currently worked on when it's C<value()> method is invoked.
+
+C<SQL::Statement> creates the object tree for where clause evaluation
+directly after successful parsing a statement from the given C<where_clause>,
+if any.
+
 =head1 Executing & fetching data from SQL statements
 
 =head2 execute
 
-When called from a DBD or other subclass of SQL::Statement, the execute() method will be executed against whatever datasource (persistant storage) is supplied by the DBD or the subclass (e.g. CSV files for DBD::CSV, or BerkeleyDB for DBD::DBM).  If you are using SQL::Statement directly rather than as a subclass, you can call the execute() method and the statements will be executed() using temporary in-memory tables.  When used directly, like that, you need to create a cache hashref and pass it as the first argument to execute:
+When called from a DBD or other subclass of SQL::Statement, the execute()
+method will be executed against whatever datasource (persistant storage) is
+supplied by the DBD or the subclass (e.g. CSV files for L<DBD::CSV>, or
+BerkeleyDB for L<DBD::DBM>). If you are using L<SQL::Statement> directly
+rather than as a subclass, you can call the execute() method and the
+statements will be executed() using temporary in-memory tables. When used
+directly, like that, you need to create a cache hashref and pass it as the
+first argument to execute:
 
   my $cache  = {};
   my $parser = SQL::Parser->new();
   my $stmt   = SQL::Statement->new('CREATE TABLE x (id INT)',$parser);
   $stmt->execute( $cache );
 
-If you are using a statement with placeholders, those can be passed to execute after the $cache:
+If you are using a statement with placeholders, those can be passed to
+execute after the C<$cache>:
 
   $stmt      = SQL::Statement->new('INSERT INTO y VALUES(?,?)',$parser);
   $stmt->execute( $cache, 7, 'foo' );
 
 =head2 fetch
 
-Only a single fetch() method is provided - it returns a single row of data as an arrayref.  Use a loop to fetch all rows:
+Only a single C<fetch()> method is provided - it returns a single row of
+data as an arrayref. Use a loop to fetch all rows:
 
- while (my $row = $stmt->fetch) {
+ while (my $row = $stmt->fetch()) {
      # ...
  }
 
@@ -301,11 +345,13 @@ Only a single fetch() method is provided - it returns a single row of data as an
     INSERT INTO a VALUES(1)
     INSERT INTO a VALUES(2)
     SELECT MAX(b) FROM a  "
- ){
+ )
+ {
     $stmt = SQL::Statement->new($sql,$parser);
     $stmt->execute($cache);
     next unless $stmt->command eq 'SELECT';
-    while (my $row=$stmt->fetch) {
+    while (my $row=$stmt->fetch)
+    {
         print "@$row\n";
     }
  }
@@ -314,7 +360,9 @@ Only a single fetch() method is provided - it returns a single row of data as an
 =head1 AUTHOR & COPYRIGHT
 
 Copyright (c) 2005, Jeff Zucker <jzuckerATcpan.org>, all rights reserved.
+Copyright (c) 2009, Jens Rehsack <rehsackATcpan.org>, all rights reserved.
 
-This document may be freely modified and distributed under the same terms as Perl itself.
+This document may be freely modified and distributed under the same terms
+as Perl itself.
 
 =cut
