--- a/lib/SQL/Statement/Structure.pod
+++ b/lib/SQL/Statement/Structure.pod
@@ -149,7 +149,7 @@ used in a statement. For example, consider the following:
 
 This would return two instances of C<SQL::Statement::Param>. Param objects
 implement a single method, C<$param->num()>, which retrieves the parameter
-number. (0 and 1, in the above example). As of now, not very usefull ... :-)
+number. (0 and 1, in the above example). As of now, not very useful ... :-)
 
 =head2 B<row_values>
 
@@ -304,7 +304,7 @@ if any.
 =head2 execute
 
 When called from a DBD or other subclass of SQL::Statement, the execute()
-method will be executed against whatever datasource (persistant storage) is
+method will be executed against whatever datasource (persistent storage) is
 supplied by the DBD or the subclass (e.g. CSV files for L<DBD::CSV>, or
 BerkeleyDB for L<DBD::DBM>). If you are using L<SQL::Statement> directly
 rather than as a subclass, you can call the execute() method and the
