--- a/Changes
+++ b/Changes
@@ -17,11 +17,15 @@ Version 1.28
    and all data access methods of tables - see SQL::Eval::Table for details)
 * Tests are fixed to use TEMP TABLES explicitely when required
 * check for invalid column names fixed
+* Don't let depreciated parser structures stay alive in SQL::Statement when
+  reusing the Parser
 
 [Documentation]
 * Method documentation of SQL::Statement and SQL::Eval::Table are improved
 * Add a Roadmap describing future plans for SQL::Statement (in addition to
   DBD::File::Roadmap).
+* POD spelling fixes provided by H.Merijn Brand and Pod::Spell::CommonMistakes
+  (thanks Tux)
 
 [Things that may break your code]
 * SQL::Statement 1.28 is expected not to work proper in combination with
